--- a/page_filler.ipynb
+++ b/page_filler.ipynb
@@ -2,208 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "20af6144",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
+    "import os\n",
     "import json\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "from selenium.webdriver import ActionChains\n",
-    "from selenium.common.exceptions import NoSuchElementException, TimeoutException, StaleElementReferenceException\n",
-    "import traceback\n",
+    "from wdf import FormFiller\n",
     "\n",
-    "import os\n",
     "os.environ[\"SELENIUM_MANAGER_DISABLE_TELEMETRY\"] = \"true\"\n",
     "\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
-    "def refresh_on_error(max_attempts=3):\n",
-    "    def decorator(risky_thing):\n",
-    "        def wrapper(self, *args, attempts=0, **kwargs):\n",
-    "            if attempts > max_attempts:\n",
-    "                print(f\"Tried {attempts} times. Giving up.\")\n",
-    "                return\n",
-    "            try:\n",
-    "                return risky_thing(self, *args, **kwargs)\n",
-    "            except (NoSuchElementException, TimeoutException) as e:\n",
-    "                try:\n",
-    "                    self.driver.find_element(By.XPATH, \"//h1[text()='Something went wrong']\")\n",
-    "                except NoSuchElementException:\n",
-    "                    raise e from None\n",
-    "                print(f\"Attempt {attempts + 1} failed, refreshing and retrying...\")\n",
-    "                self.driver.refresh()\n",
-    "                return wrapper(self, *args, attempts=attempts+1, **kwargs)\n",
-    "            except (StaleElementReferenceException) as e:\n",
-    "                print(f\"Attempt {attempts + 1} failed, refreshing and retrying...\")\n",
-    "                self.driver.refresh()\n",
-    "                return wrapper(self, *args, attempts=attempts+1, **kwargs)\n",
-    "        return wrapper\n",
-    "    return decorator\n",
-    "\n",
-    "\n",
-    "class FormFiller:\n",
-    "    def __init__(self, driver, wait):\n",
-    "        self.driver = driver\n",
-    "        self.wait = wait\n",
-    "\n",
-    "    def fill_out_text_box(self, element_id, text, css_selector=False):\n",
-    "        if css_selector:\n",
-    "            locator_tuple = (By.CSS_SELECTOR, element_id)\n",
-    "        else:\n",
-    "            locator_tuple = (By.ID, element_id)\n",
-    "        input_box = self.wait.until(EC.presence_of_element_located(locator_tuple))\n",
-    "        self.driver.execute_script(\"arguments[0].scrollIntoView(true);\", input_box)\n",
-    "        input_box.clear()\n",
-    "        input_box = self.wait.until(EC.presence_of_element_located(locator_tuple)) # is this really necessary?\n",
-    "        input_box.send_keys(text)\n",
-    "    \n",
-    "    def select_custom_dropdown(self, button_id, options, multiselect=False, parent=0):\n",
-    "        dropdown_button = self.wait.until(EC.element_to_be_clickable((By.ID, button_id)))\n",
-    "        self.driver.execute_script(\"arguments[0].scrollIntoView(true);\", dropdown_button)\n",
-    "        self.click_button(button_id, parent=parent, css_selector=False)\n",
-    "\n",
-    "        if isinstance(options, str):\n",
-    "            options = [options]\n",
-    "\n",
-    "        if multiselect:\n",
-    "            # cycle through options passed\n",
-    "            for option_text in options:\n",
-    "                # type in an option\n",
-    "                dropdown_button.send_keys(option_text)\n",
-    "                dropdown_button.send_keys(Keys.ENTER)\n",
-    "                # # expand to see if list still open\n",
-    "                # data-automation-id=\"activeListContainer\"\n",
-    "                \n",
-    "        else:\n",
-    "            # see choices\n",
-    "            list_choices = self.wait.until(EC.presence_of_all_elements_located((By.CSS_SELECTOR, \"div[visibility='opened'] ul[role='listbox'] li\")))\n",
-    "            \n",
-    "            # cycle through options passed\n",
-    "            for option_text in options:\n",
-    "                # if option offered in choices, select it\n",
-    "                if option_text in [list_choice.text for list_choice in list_choices]:\n",
-    "                    dropdown_button.send_keys(option_text)\n",
-    "                    dropdown_button.send_keys(Keys.ENTER)\n",
-    "                    break\n",
-    "            else:\n",
-    "                dropdown_button.send_keys(Keys.ESCAPE)\n",
-    "\n",
-    "\n",
-    "    def click_button(self, button_id, parent=0, css_selector=True):\n",
-    "        if css_selector:\n",
-    "            button = self.wait.until(EC.presence_of_element_located((By.CSS_SELECTOR, button_id)))\n",
-    "        else:\n",
-    "            button = self.wait.until(EC.presence_of_element_located((By.ID, button_id)))\n",
-    "        for _ in range(parent):\n",
-    "            button = button.find_element(By.XPATH, \"./..\")\n",
-    "        self.driver.execute_script(\"arguments[0].scrollIntoView(true);\", button)\n",
-    "        button.click()\n",
-    "\n",
-    "    def click_checkbox(self, element_id, check=True):\n",
-    "        checkbox = self.wait.until(EC.presence_of_element_located((By.ID, element_id)))\n",
-    "        self.driver.execute_script(\"arguments[0].scrollIntoView(true);\", checkbox)\n",
-    "        if checkbox.is_selected() != check:\n",
-    "            checkbox.click()\n",
-    "\n",
-    "    def add_work_experience(self, exp_data):\n",
-    "        \"\"\"Adds a work experience panel and fills it out.\"\"\"\n",
-    "        # Click 'add' button to add a work experience panel\n",
-    "        self.click_button(\"div[aria-labelledby='Work-Experience-section'] button[data-automation-id='add-button']\")\n",
-    "\n",
-    "        # Find last added work experience panel\n",
-    "        null_container = self.wait.until(EC.presence_of_all_elements_located((By.CSS_SELECTOR, \"div[aria-labelledby='Work-Experience-section'] div[data-fkit-id$='--null']\")))[-1]\n",
-    "        panel_prefix = null_container.get_attribute(\"data-fkit-id\").replace(\"--null\", \"\")\n",
-    "        \n",
-    "        # Fill out work experience data\n",
-    "        self.fill_out_text_box(f\"{panel_prefix}--jobTitle\", exp_data[\"jobTitle\"])\n",
-    "        self.fill_out_text_box(f\"{panel_prefix}--companyName\", exp_data[\"companyName\"])\n",
-    "        self.fill_out_text_box(f\"{panel_prefix}--location\", exp_data.get(\"location\", \"\"))\n",
-    "        self.fill_out_text_box(f\"{panel_prefix}--startDate-dateSectionMonth-input\", exp_data[\"startMonth\"])\n",
-    "        self.fill_out_text_box(f\"{panel_prefix}--startDate-dateSectionYear-input\", exp_data[\"startYear\"])\n",
-    "        if exp_data.get(\"currentlyWorkHere\", False) == True:\n",
-    "            self.click_checkbox(f\"{panel_prefix}--currentlyWorkHere\")\n",
-    "        else:\n",
-    "            self.fill_out_text_box(f\"{panel_prefix}--endDate-dateSectionMonth-input\", exp_data[\"endMonth\"])\n",
-    "            self.fill_out_text_box(f\"{panel_prefix}--endDate-dateSectionYear-input\", exp_data[\"endYear\"])\n",
-    "        self.fill_out_text_box(f\"{panel_prefix}--roleDescription\", exp_data.get(\"roleDescription\", \"\"))\n",
-    "\n",
-    "    def add_education(self):\n",
-    "        \"\"\"Adds an education panel and fills it out.\"\"\"\n",
-    "        # Click 'add' button to add an education panel\n",
-    "        self.click_button(\"div[aria-labelledby='Education-section'] button[data-automation-id='add-button']\")\n",
-    "\n",
-    "        # Find last added education panel\n",
-    "        null_container = self.wait.until(EC.presence_of_all_elements_located((By.CSS_SELECTOR, \"div[aria-labelledby='Education-section'] div[data-fkit-id$='--null']\")))[-1]\n",
-    "        panel_prefix = null_container.get_attribute(\"data-fkit-id\").replace(\"--null\", \"\")\n",
-    "        \n",
-    "        # Fill out education data\n",
-    "        self.fill_out_text_box(f\"{panel_prefix}--schoolName\", \"Rowan University\")\n",
-    "        self.select_custom_dropdown(f\"{panel_prefix}--degree\", \"Bachelors\")\n",
-    "        self.select_custom_dropdown(f\"{panel_prefix}--fieldOfStudy\", \"Chemical Engineering\", multiselect=True, parent=2)\n",
-    "\n",
-    "    def upload_resume_file(self, file_path=\"resume.pdf\"):\n",
-    "        file_input = self.wait.until(EC.presence_of_element_located((By.CSS_SELECTOR, \"input[type='file'][data-automation-id='file-upload-input-ref']\")))\n",
-    "        file_string = os.path.abspath(file_path)\n",
-    "        file_input.send_keys(file_string)\n",
-    "\n",
-    "\n",
-    "    def create_acct_or_log_in(self, email, password):\n",
-    "        page_title = self.wait.until(EC.presence_of_element_located((By.CSS_SELECTOR, \"h2[id='authViewTitle']\")))\n",
-    "        if page_title.text == \"Create Account\":\n",
-    "            self.fill_out_text_box(\"input[data-automation-id='email']\", email, css_selector=True)\n",
-    "            self.fill_out_text_box(\"input[data-automation-id='password']\", password, css_selector=True)\n",
-    "            self.fill_out_text_box(\"input[data-automation-id='verifyPassword']\", password, css_selector=True)\n",
-    "            self.click_button(\"button[data-automation-id='createAccountSubmitButton']\", parent=1)\n",
-    "        time.sleep(0.5)\n",
-    "        print(\"waiting...\")\n",
-    "        page_title = self.wait.until(EC.presence_of_element_located((By.CSS_SELECTOR, \"h2[id='authViewTitle']\")))\n",
-    "        print(\"title found!\")\n",
-    "        if page_title.text == \"Sign In\":\n",
-    "            self.fill_out_text_box(\"input[data-automation-id='email']\", email, css_selector=True)\n",
-    "            self.fill_out_text_box(\"input[data-automation-id='password']\", password, css_selector=True)\n",
-    "            self.click_button(\"button[data-automation-id='signInSubmitButton']\", parent=1)\n",
-    "\n",
-    "    @refresh_on_error(max_attempts=1)\n",
-    "    def fill_out_information_page(self):\n",
-    "        # Select \"How Did You Hear About Us?\" dropdown value\n",
-    "        self.select_custom_dropdown(\"source--source\", \"LinkedIn\")\n",
-    "        # Select radio button\n",
-    "        # self.click_button(\"input#hssh3\", parent=1)  # go to label/container and click\n",
-    "        self.select_custom_dropdown(\"country--country\", \"United States of America\")\n",
-    "        self.fill_out_text_box(\"name--legalName--firstName\", \"Kevin\")\n",
-    "        self.fill_out_text_box(\"name--legalName--lastName\", \"Grazel\")\n",
-    "        self.fill_out_text_box(\"address--addressLine1\", \"19 Delevan St\")\n",
-    "        self.fill_out_text_box(\"address--city\", \"Brooklyn\")\n",
-    "        self.select_custom_dropdown(\"address--countryRegion\", [\"NY\", \"New York\"])  # State dropdown\n",
-    "        self.fill_out_text_box(\"address--postalCode\", \"11231\")\n",
-    "        self.select_custom_dropdown(\"phoneNumber--phoneType\", \"Mobile\")\n",
-    "        self.select_custom_dropdown(\"phoneNumber--countryPhoneCode\", \"United States of America (+1)\", multiselect=True, parent=2)\n",
-    "        self.fill_out_text_box(\"phoneNumber--phoneNumber\", \"(856) 602-2151\")\n",
-    "\n",
-    "    @refresh_on_error(max_attempts=3)\n",
-    "    def fill_out_experience_page(self, experience_data):\n",
-    "        # Work\n",
-    "        for company in experience_data.keys():\n",
-    "            self.add_work_experience(experience_data[company])\n",
-    "        \n",
-    "        # Education\n",
-    "        self.add_education()\n",
-    "\n",
-    "        # Resume Upload\n",
-    "        self.upload_resume_file()\n",
-    "\n",
-    "        # Websites\n",
-    "\n",
-    "\n",
     "driver = webdriver.Chrome()\n",
-    "\n",
     "driver.get(\"data:,\")\n",
     "wait = WebDriverWait(driver, 15)\n",
     "\n",
