final_final.final

--- a/page_filler.ipynb
+++ b/page_filler.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "10543b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Run cells one at a time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "20af6144",
    "metadata": {},
    "outputs": [],
@@ -10,7 +20,6 @@
     "import os\n",
     "import json\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from wdf import FormFiller\n",
     "\n",
     "os.environ[\"SELENIUM_MANAGER_DISABLE_TELEMETRY\"] = \"true\"\n",
@@ -20,31 +29,41 @@
     "\n",
     "driver = webdriver.Chrome()\n",
     "driver.get(\"data:,\")\n",
-    "wait = WebDriverWait(driver, 15)\n",
     "\n",
-    "f = FormFiller(driver, wait)"
+    "f = FormFiller(driver)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "00b664b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Paste in URL, click \"Apply manually\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dedde895",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "waiting...\n",
-      "title found!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "email = os.getenv(\"EMAIL\")\n",
     "password = os.getenv(\"PASSWORD\")\n",
     "\n",
     "f.create_acct_or_log_in(email, password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "923a689e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Make sure it logged you in"
    ]
   },
   {
@@ -55,6 +74,16 @@
    "outputs": [],
    "source": [
     "f.fill_out_information_page()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26cf0abd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Review info entered, click \"Next\""
    ]
   },
   {
@@ -73,51 +102,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b88cbe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb8056e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "28b61ea8",
+   "id": "80df1ebf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wait = WebDriverWait(driver, 15)\n",
-    "f = FormFiller(driver, wait)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f47e8171",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "driver = webdriver.Chrome()\n",
-    "\n",
-    "JOB_PAGE_URL = \"\"\"\n",
-    "https://nyp.wd1.myworkdayjobs.com/en-US/nypcareers/job/NYPWeill-Cornell-Medical-Center/Staff-Nurse--2SW-Neuro-SDU-ICU-Full-time-Nights_00873917/apply?clientRequestID=c5c2a454712645f2a56783277f68884a\n",
-    "\"\"\".strip('\\n').partition('?')[0]\n",
-    "\n",
-    "driver.get(JOB_PAGE_URL+'/applyManually')\n",
-    "wait = WebDriverWait(driver, 10)"
+    "### That's all folks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d4c1d0e",
+   "id": "f5f7f39a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -125,10 +120,96 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54db55cd",
+   "id": "8693bf68",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b497cd6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bab34063",
+   "metadata": {},
+   "source": [
+    "### Work in progress:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09360389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.common.exceptions import NoSuchElementException, TimeoutException, StaleElementReferenceException\n",
+    "\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dda8eb67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['education-162--school',\n",
+       " 'education-162--degree',\n",
+       " 'education-162--fieldOfStudy']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_container = f.wait.until(EC.presence_of_all_elements_located((By.CSS_SELECTOR, \"div[aria-labelledby='Education-section'] div[data-fkit-id$='--null']\")))[-1]\n",
+    "labels = null_container.find_elements(By.CSS_SELECTOR, \"label\")\n",
+    "\n",
+    "[label.get_attribute('for') for label in labels]\n",
+    "\n",
+    "# for nyp job:\n",
+    "# ['education-238--schoolName',\n",
+    "#  'education-238--degree',\n",
+    "#  'education-238--fieldOfStudy',\n",
+    "#  None,\n",
+    "#  None]\n",
+    "\n",
+    "# for jj job:\n",
+    "# ['education-162--school',\n",
+    "#  'education-162--degree',\n",
+    "#  'education-162--fieldOfStudy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56dfb168",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "el = null_container.find_element(By.ID, 'education-162--school')\n",
+    "\n",
+    "element_html = driver.execute_script(\"return arguments[0].outerHTML;\", el)\n",
+    "pretty_html = BeautifulSoup(element_html, \"html.parser\").prettify()\n",
+    "pretty_html.replace(\" \", \"\\n\")"
+   ]
   }
  ],
  "metadata": {
